<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PanelingLamp</string>
    <string name="action_settings">Settings</string>
    <string name="arduino_bt_module_name">HC-06</string>
    <string name="arduino_bt_encoding">UTF-8</string>
    <string name="arduino_bt_module_adress">0C:8B:FD:E8:9B:3E</string>
    <string name="rotation_s">Rotation(s)</string>
    <string name="reset">Reset</string>
    <string name="set_zero">Set Zero</string>
    <string name="title_activity_paneling_lamp">PanelingLamp</string>
    <string name="title_section1">Shape</string>
    <string name="title_section2">Manual Control</string>
    <string name="title_section3">About</string>
    <string name="title_section4">Impress</string>
    <string name="title_section5">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favs">Favorites</string>
    <string name="own">Own</string>
    <string name="motorTab">Motors</string>
    <string name="ledTab">LEDs</string>
    <string name="power">Power</string>
    <string name="move_in_form">Activate Shape</string>
    <string name="editform">Edit Shape</string>
    <string name="removeform">Remove from Favorites</string>
    <string name="deleteform">Delete Shape</string>
    <string name="title_activity_edit_form">EditFormActivity</string>
    <string name="editformTitle">Edit Shape Title</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="motor_1">Motor 1</string>
    <string name="add_form_to_favs">Add to Favorites</string>
    <string name="save_as_new_form">Save As New Shape</string>
    <string name="move_motors">Move Motors</string>
    <string name="reset_motors_to_0">Move Motors to Zero Position</string>
    <string name="set_as_zero">Set Current As Zero Position</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="save">Save</string>
    <string name="add_new_form">Add New Shape</string>
    <string name="name">Name</string>
    <string name="dialog_new_form_title">Save New Shape</string>
    <string name="dialog_new_form_take_pic_and_save">Take Picture And Save</string>
    <string name="hint_name">Please Add a Name</string>
    <string name="title_activity_new_form">NewFormActivity</string>
    <string name="take_shape_as_template">Take Shape As Template</string>
    <string name="please_change_Photo">Please Change Photo</string>
    <string name="upper_bound">Upper Bound</string>
    <string name="lower_bound">Lower Bound</string>
    <string name="reset_database">Reset Database</string>
    <string name="reset_database_description">Delete all own shapes and restore all standard shapes.</string>
    <string name="lower_bound_description">Set a lower bound to stop the motors at this position.</string>
    <string name="upper_bound_description">Set a upper bound to stop the motors at this position</string>
    <string name="enter_valid_number">Enter a valid number</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="demo_mode_descr">In the demo mode the shape will change all x minutes. If the shape was changed manually then the demo mode will restart itself after x minutes without interaction. </string>
    <string name="minute_s">Minute(s)</string>
    <string name="password_protection">Password Protection</string>
    <string name="password_protection_descr">Activate/Deactivate the password protection for the settings view.</string>
    <string name="preference_settings_password_protection">pref_passw_protect</string>
    <string name="preference_file_key">preference_file</string>
    <string name="enter">Enter</string>
    <string name="pwd">1337</string>
    <string name="wrong_permission">You don\'t have the permissions for this.</string>
    <string name="about_lamp">Die PanelinLamp ist eine Art Lichtteppich, welche sich in jegliche Richtungen verbiegen und verdrehen kann. Die Idee besteht darin, gleichzeitig atmosphärisches Licht als auch Arbeitslicht zu kombinieren. Die Lampe besteht aus 49 Panel, die mit Cre Leds ausgestattet sind. Die Panel sind in jeweils 7 Stück große Segmente zerteilt, die unabhänig voneinander gedimmt werden können. Zum Verändern der Form kommen 5 Schrittmotoren zum Einsatz, die jeweils an den Ecken und in der Mitte des Teppischs angebracht sind. </string>
    <string name="ninety_clockwise">90° clockwise</string>
    <string name="ninety_counter_clockwise">90° counter clockwise</string>

    <string name="creators">Creators</string>
    <string name="eric">Eric Hofmann</string>
    <string name="eric_mail">e.hofmann@hbksaar.de</string>
    <string name="philipp">Philipp Schardt</string>
    <string name="philipp_mail">s9phscar@stud.uni-saarland.de</string>


    <string name="project">Project Living room labor</string>
    <string name="project_descr">Eine Kooperation von dpz/xm:lab/HBK und DFKI/UdS zur Gestaltung eines digital erweiterten Wohnzimmers der Zukunft. In diesem Projekt entwickeln Studierende der HBK und der Medieninformatik Konzepte und Prototypen für intelligente Gegenstände im Wohnzimmer. Solche Objekte können miteinander vernetzt sein, über Sensorik ihre Umgebung und Bewohner wahrnehmen und mit ihnen kommunizieren. Für die Umsetzung stehen zahlreiche technische Plattformen zur Verfügung, von Projektoren über Arduino Boards mit Sensoren/Aktoren bis zum Multitouch Tisch "MS Surface".</string>
    <string name="advisors">Advisors</string>


</resources>
