<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="fragments.settings.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/settings_card_lower_bound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="5dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">


    <CheckBox
        android:id="@+id/settings_checkBox_upper_bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginRight="10dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:gravity="left">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">




                <TextView
                        android:id="@+id/settings_textView_lower_bound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:text="@string/upper_bound"
                    android:textAppearance="?android:attr/textAppearanceLarge" />



                </LinearLayout>
                <TextView
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:text="@string/upper_bound_description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                     />
            </LinearLayout>

    <EditText
        android:id="@+id/settings_editText_lower_bound"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_toEndOf="@+id/settings_switch_upper_bound"
        android:digits="0123456789-."
        android:ems="10"
        android:gravity="center"
        android:hint="0"
        android:inputType="numberDecimal" />

</LinearLayout>

            </android.support.v7.widget.CardView>




        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/settings_card_upper_bound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="5dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp">




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/settings_checkBox_lower_bound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                    android:id="@+id/textView_lower_bound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lower_bound"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toEndOf="@+id/settings_switch_upper_bound"
                    android:digits="0123456789-."
                    android:ems="10"
                    android:gravity="center"
                    android:hint="200"
                    android:inputType="numberDecimal" />
            </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lower_bound_description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                     />


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/settings_card_reset_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="4dp"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                >

            <TextView
                android:id="@+id/settings_textView_resetDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_database"
                android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/settings_textView_rrset_database_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_database_description"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>


            </android.support.v7.widget.CardView>



    </LinearLayout>
</FrameLayout>
